[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
rss = "1.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
signal-hook = "0.3.9"
fcntl = "0.1"
serde = "1.0.130"
serde_json = "1.0.68"

[dev-dependencies]
wiremock = "0.5"
tokio-test = "0.4"
tempfile = "3.2"
